src/test/resources/tokens/invalid/identifier_starts_with_number.unpick
unpick v3
group int 0a